tests/fails/f21.t
require("fail")

terra foo()
    return nil + "a"
end
foo()
